# Task-

./: .coverage  .coveragerc  .env  Dockerfile  Dockerfile.pg_cron  Makefile  README.md  authorization.py  create_databases.sh  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
gcs/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
pgdata/base/1/: 2619  2696  2840  2841
pgdata/global/: 1260  pg_control
pgdata/pg_stat/: pgstat.stat
task/: admin.py  facebook_login.py  github_login.py  google_login.py  models.py  pagination_class.py  serializers.py  test_with_pytest.py  test_with_unittest.py  urls.py  views.py
task/migrations/: 0001_initial.py  0002_alter_services_service_details.py  0002_services.py  0003_alter_services_service_details.py  0003_users.py  0004_alter_services_service_details.py  0004_alter_users_password.py  0005_alter_users_password.py  0006_alter_users_registration_method.py
task/templates/: login.html
task/tests/: facebook_tests.py  git_hub_tests.py  google_tests.py  test_views.py
task/tests/factories/: model_factories.py
